trash icon is added.

--- a/Practice1/Base.lproj/Main.storyboard
+++ b/Practice1/Base.lproj/Main.storyboard
@@ -223,7 +223,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YzW-kj-t4j">
                                 <rect key="frame" x="0.0" y="733" width="414" height="80"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="494-LR-k7I">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="494-LR-k7I">
                                         <rect key="frame" x="22" y="17.5" width="370" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="zts-QD-du9"/>
